// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`computeRois 3x3 mask 1`] = `
Array [
  Roi {
    "id": 1,
    "map": Object {
      "data": Int16Array [
        1,
        1,
        1,
        1,
        -1,
        -1,
        -1,
        -1,
        2,
      ],
      "height": 3,
      "nbNegative": 1,
      "nbPositive": 2,
      "width": 3,
    },
    "maxColumn": 2,
    "maxRow": 1,
    "minColumn": 0,
    "minRow": 0,
    "surface": 4,
  },
  Roi {
    "id": 2,
    "map": Object {
      "data": Int16Array [
        1,
        1,
        1,
        1,
        -1,
        -1,
        -1,
        -1,
        2,
      ],
      "height": 3,
      "nbNegative": 1,
      "nbPositive": 2,
      "width": 3,
    },
    "maxColumn": 2,
    "maxRow": 2,
    "minColumn": 2,
    "minRow": 2,
    "surface": 1,
  },
]
`;

exports[`computeRois 3x3 mask 2`] = `
Array [
  Roi {
    "id": -1,
    "map": Object {
      "data": Int16Array [
        1,
        1,
        1,
        1,
        -1,
        -1,
        -1,
        -1,
        2,
      ],
      "height": 3,
      "nbNegative": 1,
      "nbPositive": 2,
      "width": 3,
    },
    "maxColumn": 2,
    "maxRow": 2,
    "minColumn": 0,
    "minRow": 1,
    "surface": 4,
  },
]
`;
